[workspace]
members = ["api", "common-rs", "merkle-tree", "programs/*", "validator-bonds-cli", "settlement-pipelines", "bid-distribution", "protected-event-distribution", "trident-tests/fuzz_tests"]
resolver = "1"

[workspace.dependencies]
anchor-lang = "0.29.0"
anyhow = "1.0.82"
bincode = "1.3.3"
chrono = "0.4"
default-env = "0.1.1"
env_logger = "0.10.0"
fast-math = "0.1.1"
futures = "0.3.29"
gcp-bigquery-client = "0.17.1"
hex = "0.4.3"
log = "0.4.14"
regex = "1.10.4"
serde = "1.0.197"
serde_json = "1.0.114"
serde_yaml = "0.8"
shellexpand = "3.1.0"
solana-account-decoder = "1.18.26"
solana-accounts-db = "=1.18.26"
solana-clap-utils = "1.18.26"
solana-cli-config = "1.18.26"
solana-client = "=1.18.26"
solana-ledger = "=1.18.26"
solana-logger = "1.18.26"
solana-program = "=1.18.26"
solana-runtime = "=1.18.26"
solana-sdk = "=1.18.26"
solana-security-txt = "1.1.1"
structopt = "0.3.21"
tracing = "0.1.37"
tracing-log = "0.1.3"

[workspace.dependencies.anchor-client]
version = "0.29.0"
features = ["async"]

[workspace.dependencies.anchor-spl]
version = "0.29.0"
default-features = false

[workspace.dependencies.clap]
version = "4.1.11"
features = ["derive", "env"]

[workspace.dependencies.merkle-tree]
path = "./merkle-tree"

[workspace.dependencies.rust_decimal]
version = "1.26"
features = ["db-postgres"]

[workspace.dependencies.protected-event-distribution]
path = "protected-event-distribution"

[workspace.dependencies.snapshot-parser-types]
git = "https://github.com/marinade-finance/solana-snapshot-parser"
branch = "master"

[workspace.dependencies.solana-transaction-executor]
git = "https://github.com/marinade-finance/solana-transaction-executor"
branch = "master"

[workspace.dependencies.solana-transaction-builder]
git = "https://github.com/marinade-finance/solana-transaction-builder"
branch = "main"

[workspace.dependencies.solana-transaction-builder-executor]
git = "https://github.com/marinade-finance/solana-transaction-builder"
branch = "main"

[workspace.dependencies.tokio]
version = "1"
features = ["full"]

[workspace.dependencies.tokio-postgres]
version = "0.7.7"
features = ["with-chrono-0_4"]

[workspace.dependencies.tracing-subscriber]
version = "0.3"

[workspace.dependencies.utoipa]
version = "3.2.1"
features = ["chrono", "decimal"]

[workspace.dependencies.validator-bonds]
path = "./programs/validator-bonds"

[workspace.dependencies.validator-bonds-common]
path = "./common-rs"

[workspace.dependencies.warp]
version = "0.3"
features = ["compression-gzip"]
[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = true

[profile.release.build-override]
codegen-units = 1
incremental = false
opt-level = 3
